2005-08-08  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/rel.c :

	  - Fixed small error in calc().

2005-08-05  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/rel.c :
	* lib/rel.h :

	  - Added a function, tbe_rel_calc(), that will give the relation
	    that exists between two intervals, as defined by the given
	    endpoints.

2005-08-05  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* VERSION :
	* configure.ac :

	  - Version 0.2.0

	* lib/rel.c :
	* lib/rel.h :

	  - Minor macro correction: from TBE_STR_* to TBE_REL_STR_*.

2005-07-28  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/list.h :
	* lib/list.c :

	  - Added a traverse list function that will go through each node of a
	    given list and call a given function.

	* lib/network.c :

	  - Sacrificed readability for efficiency! The network dump functions
	    now use the traverse list function.

	  - Now add_rel() uses the traverse list function too.

	* test/mem_test.sh :

	  - Removed BASH extensions like arrays, $[], etc.

	  - Also show free'd pointers that were unmalloc'd.

2005-07-27  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/mem.h :
	* lib/mem.c :

	  - When enabled (through --enable-debug), the wrapper functions
	    for malloc, realloc and free will dump the memory address
	    involved in the operation. A very crude way of detecting
	    memory leaks.

	* lib/tribe.h :

	  - Removed old TBE_PTR_ macros in favour of the new TBE_MEM_ in
	    mem.h.

	* test/mem_test.sh :

	  - Added a simple script that checks for memory leaks based on the
	    output of the memory debug mechanism.

	* lib/list.h :
	* lib/list.c :

	  - Now uses new memory macros.

	  - Encapsulated the list internals into list.c. In the header file,
	    the list type definition is just void *.

	  - Interal structures renamed with a __tbe prefix.

	  - Added tbe_list_create() and tbe_list_destroy() to manually
	    allocate and deallocate a list.
