@@ -1,5 +1,9 @@
 2005-08-08  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
+	* docs/rel.txt :
+
+	  - Added interval relation definitions to avoid confusion.
+
 	* lib/rel.c :
 
 	  - Fixed small error in calc().
